# mig_vulkan

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  ws.code-workspace
docs/: sequence.md
include/: DescriptorPool.hpp  DescriptorSet.hpp  DescriptorSetLayout.hpp  Device.hpp  Mesh.hpp  MeshModel.hpp  Pipeline.hpp  PipelineLayout.hpp  Renderer.hpp  ShaderModule.hpp  SwapChain.hpp  Ultilities.hpp  VWrapp.hpp  VWrappUtils.hpp  VulkanRenderer.hpp  VulkanValidation.h  stb_image.h
models/: Seahawk.mtl
shaders/: second.frag  second.vert  shader.frag  shader.vert
simples/glfw/: CMakeLists.txt  main.cpp
simples/sdl3/: CMakeLists.txt  main.cpp
src/: Device.cpp  Mesh.cpp  MeshModel.cpp  Pipeline.cpp  Renderer.cpp  ShaderModule.cpp  SwapChain.cpp  VWrapp.cpp  VWrappUtils.cpp  VulkanRenderer.cpp
src/glfw/: CMakeLists.txt  Ultilities.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  main.cpp
src/sdl/: CMakeLists.txt  Ultilities.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  main.cpp  main1.cpp  main2.cpp  main3.cpp
src/sdl/olds/: main1.cpp  main2.cpp  main4.cpp
toolchain/: clang.cmake
